# Acad-AI

./: .gitignore  LICENSE  README.md  app.py  build_kb.py  config.py  main.py  pyproject.toml  requirements.txt  test_kb.py  test_retrieval.py  utils.py
agents/: critic.py  reasoning.py  router.py  tutor.py
docs/: architecture.md
ingestion/: pdf_ingestion.py
knowledge_base/: builder.py
llm/: mistral.py
memory/: session.py
models/: chunk.py
retrieval/: embeddings.py  faiss_store.py  hybrid.py  keyword.py  subject.py
tools/: flashcards.py  quiz.py  roadmap.py  study.py
ui/: components.py  styles.py
ui/tabs/: ask.py  evaluation.py  memory.py  roadmap.py  study_tools.py  viva.py
