[project]
name = "acadai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "faiss-cpu>=1.14.3",
    "mistralai>=2.5.0",
    "numpy>=2.5.0",
    "pandas>=3.0.3",
    "pypdf>=6.14.2",
    "python-dotenv>=1.2.2",
    "python-pptx>=1.0.2",
    "requests>=2.34.2",
    "scikit-learn>=1.9.0",
    "sentence-transformers>=5.6.0",
    "streamlit>=1.58.0",
    "torch>=2.12.1",
    "torchvision>=0.27.1",
    "tqdm>=4.68.3",
]
